@@ -17,17 +17,18 @@ import static javax.servlet.http.HttpServletResponse.SC_BAD_REQUEST;
 import static javax.servlet.http.HttpServletResponse.SC_NOT_FOUND;
 import static javax.servlet.http.HttpServletResponse.SC_NO_CONTENT;
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static tech.pegasys.artemis.beaconrestapi.RestApiConstants.EPOCH;
 import static tech.pegasys.artemis.beaconrestapi.RestApiConstants.ROOT;
 import static tech.pegasys.artemis.beaconrestapi.RestApiConstants.SLOT;
-import static tech.pegasys.artemis.util.async.SafeFuture.completedFuture;
 
 import com.google.common.eventbus.EventBus;
 import com.google.common.primitives.UnsignedLong;
 import io.javalin.http.Context;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -44,8 +45,6 @@ import tech.pegasys.artemis.api.schema.BeaconState;
 import tech.pegasys.artemis.datastructures.util.DataStructureUtil;
 import tech.pegasys.artemis.provider.JsonProvider;
 import tech.pegasys.artemis.storage.ChainStorageClient;
-import tech.pegasys.artemis.storage.CombinedChainDataClient;
-import tech.pegasys.artemis.storage.HistoricalChainData;
 import tech.pegasys.artemis.util.async.SafeFuture;
 
 @ExtendWith(MockitoExtension.class)
@@ -54,12 +53,11 @@ public class BeaconStateHandlerTest {
   private static BeaconState beaconState;
   private static Bytes32 blockRoot;
   private static UnsignedLong slot;
-  private static HistoricalChainData historicalChainData = mock(HistoricalChainData.class);
 
   private final JsonProvider jsonProvider = new JsonProvider();
   private final Context context = mock(Context.class);
   private final String missingRoot = Bytes32.leftPad(Bytes.fromHexString("0xff")).toHexString();
-  private static ChainDataProvider provider;
+  private final ChainDataProvider dataProvider = mock(ChainDataProvider.class);
 
   @Captor private ArgumentCaptor<SafeFuture<String>> args;
 
@@ -69,20 +67,19 @@ public class BeaconStateHandlerTest {
     final ChainStorageClient storageClient = ChainStorageClient.memoryOnlyClient(localEventBus);
     beaconStateInternal = DataStructureUtil.randomBeaconState(11233);
     storageClient.initializeFromGenesis(beaconStateInternal);
-    CombinedChainDataClient combinedChainDataClient =
-        new CombinedChainDataClient(storageClient, historicalChainData);
     blockRoot = storageClient.getBestBlockRoot();
     slot = beaconStateInternal.getSlot();
-    provider = new ChainDataProvider(storageClient, combinedChainDataClient);
     beaconState = new BeaconState(beaconStateInternal);
   }
 
   @Test
   public void shouldReturnNotFoundWhenQueryAgainstMissingRootObject() throws Exception {
-    final BeaconStateHandler handler = new BeaconStateHandler(provider, jsonProvider);
+    final BeaconStateHandler handler = new BeaconStateHandler(dataProvider, jsonProvider);
+
+    when(dataProvider.isStoreAvailable()).thenReturn(true);
     when(context.queryParamMap()).thenReturn(Map.of(ROOT, List.of(missingRoot)));
-    when(historicalChainData.getFinalizedStateByBlockRoot(Bytes32.fromHexString(missingRoot)))
-        .thenReturn(completedFuture(Optional.empty()));
+    when(dataProvider.getStateByBlockRoot(any()))
+        .thenReturn(SafeFuture.completedFuture(Optional.empty()));
 
     handler.handle(context);
 
@@ -91,32 +88,47 @@ public class BeaconStateHandlerTest {
 
   @Test
   public void shouldReturnBadRequestWhenNoParameterSpecified() throws Exception {
-    final BeaconStateHandler handler = new BeaconStateHandler(provider, jsonProvider);
-    when(context.queryParamMap()).thenReturn(Map.of());
+    final BeaconStateHandler handler = new BeaconStateHandler(dataProvider, jsonProvider);
+
+    when(context.queryParamMap()).thenReturn(Collections.emptyMap());
+
     handler.handle(context);
+
     verify(context).status(SC_BAD_REQUEST);
   }
 
   @Test
   public void shouldReturnBadRequestWhenBadSlotSpecified() throws Exception {
-    final BeaconStateHandler handler = new BeaconStateHandler(provider, jsonProvider);
+    final BeaconStateHandler handler = new BeaconStateHandler(dataProvider, jsonProvider);
+
+    when(dataProvider.isStoreAvailable()).thenReturn(true);
     when(context.queryParamMap()).thenReturn(Map.of(SLOT, List.of("not-an-int")));
+
     handler.handle(context);
+
     verify(context).status(SC_BAD_REQUEST);
   }
 
   @Test
   public void shouldReturnBadRequestWhenBadParamSpecified() throws Exception {
-    final BeaconStateHandler handler = new BeaconStateHandler(provider, jsonProvider);
+    final BeaconStateHandler handler = new BeaconStateHandler(dataProvider, jsonProvider);
+
+    when(dataProvider.isStoreAvailable()).thenReturn(true);
     when(context.queryParamMap()).thenReturn(Map.of(EPOCH, List.of("not-an-int")));
+
     handler.handle(context);
+
     verify(context).status(SC_BAD_REQUEST);
   }
 
   @Test
   public void shouldReturnBeaconStateObjectWhenQueryByRoot() throws Exception {
-    final BeaconStateHandler handler = new BeaconStateHandler(provider, jsonProvider);
+    final BeaconStateHandler handler = new BeaconStateHandler(dataProvider, jsonProvider);
+
+    when(dataProvider.isStoreAvailable()).thenReturn(true);
     when(context.queryParamMap()).thenReturn(Map.of(ROOT, List.of(blockRoot.toHexString())));
+    when(dataProvider.getStateByBlockRoot(any()))
+        .thenReturn(SafeFuture.completedFuture(Optional.of(beaconState)));
 
     handler.handle(context);
 
@@ -127,32 +139,48 @@ public class BeaconStateHandlerTest {
 
   @Test
   public void shouldReturnBadRequestWhenEmptyRootIsSpecified() throws Exception {
-    final BeaconStateHandler handler = new BeaconStateHandler(provider, jsonProvider);
+    final BeaconStateHandler handler = new BeaconStateHandler(dataProvider, jsonProvider);
+
+    when(dataProvider.isStoreAvailable()).thenReturn(true);
     when(context.queryParamMap()).thenReturn(Map.of(ROOT, List.of()));
+
     handler.handle(context);
+
     verify(context).status(SC_BAD_REQUEST);
   }
 
   @Test
   public void shouldReturnBadRequestWhenEmptySlotIsSpecified() throws Exception {
-    final BeaconStateHandler handler = new BeaconStateHandler(provider, jsonProvider);
+    final BeaconStateHandler handler = new BeaconStateHandler(dataProvider, jsonProvider);
+
+    when(dataProvider.isStoreAvailable()).thenReturn(true);
     when(context.queryParamMap()).thenReturn(Map.of(SLOT, List.of()));
+
     handler.handle(context);
+
     verify(context).status(SC_BAD_REQUEST);
   }
 
   @Test
   public void shouldReturnBadRequestWhenMultipleParametersSpecified() throws Exception {
-    final BeaconStateHandler handler = new BeaconStateHandler(provider, jsonProvider);
+    final BeaconStateHandler handler = new BeaconStateHandler(dataProvider, jsonProvider);
+
+    when(dataProvider.isStoreAvailable()).thenReturn(true);
     when(context.queryParamMap()).thenReturn(Map.of(SLOT, List.of(), ROOT, List.of()));
+
     handler.handle(context);
+
     verify(context).status(SC_BAD_REQUEST);
   }
 
   @Test
   public void shouldReturnBeaconStateObjectWhenQueryBySlot() throws Exception {
-    BeaconStateHandler handler = new BeaconStateHandler(provider, jsonProvider);
+    final BeaconStateHandler handler = new BeaconStateHandler(dataProvider, jsonProvider);
+
+    when(dataProvider.isStoreAvailable()).thenReturn(true);
     when(context.queryParamMap()).thenReturn(Map.of(SLOT, List.of(slot.toString())));
+    when(dataProvider.getStateAtSlot(any()))
+        .thenReturn(SafeFuture.completedFuture(Optional.of(beaconState)));
 
     handler.handle(context);
 
@@ -163,20 +191,23 @@ public class BeaconStateHandlerTest {
 
   @Test
   public void shouldReturnNotFoundWhenQueryByMissingSlot() throws Exception {
-    BeaconStateHandler handler = new BeaconStateHandler(provider, jsonProvider);
+    BeaconStateHandler handler = new BeaconStateHandler(dataProvider, jsonProvider);
+
+    when(dataProvider.isStoreAvailable()).thenReturn(true);
     when(context.queryParamMap()).thenReturn(Map.of(SLOT, List.of("11223344")));
+    when(dataProvider.getStateAtSlot(any()))
+        .thenReturn(SafeFuture.completedFuture(Optional.empty()));
+
     handler.handle(context);
+
     verify(context).status(SC_NOT_FOUND);
   }
 
   @Test
   public void shouldReturnNoContentIfStoreNotDefined() throws Exception {
-    ChainStorageClient client = mock(ChainStorageClient.class);
-    CombinedChainDataClient combinedClient =
-        new CombinedChainDataClient(client, historicalChainData);
-    ChainDataProvider provider1 = new ChainDataProvider(client, combinedClient);
-    final BeaconStateHandler handler = new BeaconStateHandler(provider1, jsonProvider);
-    when(client.getStore()).thenReturn(null);
+    final BeaconStateHandler handler = new BeaconStateHandler(dataProvider, jsonProvider);
+
+    when(dataProvider.isStoreAvailable()).thenReturn(false);
     when(context.queryParamMap()).thenReturn(Map.of(SLOT, List.of("11223344")));
 
     handler.handle(context);
